--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="webmention" href="https://webmention.io/sethmlarson.dev/webmention" />
+    {{ html_head | safe }}
 {% block opengraph %}
     <meta property="og:site_name" content="Seth Michael Larson"/>
     <meta property="og:author" content="Seth Michael Larson"/>
