--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,6 +9,11 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
+<li>“<a href="https://blog.cassidoo.co/post/human-curation/">I miss human curation</a>” by <strong>Cassidy Williams</strong></li>
+<li>“<a href="https://www.niemanlab.org/2023/12/the-robots-will-make-us-more-human/">Robots will make us more human</a>” by <strong>Andrew Golis</strong></li>
+<li>“<a href="https://moonbase.lgbt/blog/i-want-to-see-my-friends-posts/">I want to see my friends’ posts</a>” by <strong>Luna</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=XZ3w_jec1v8">The Economics of Programming Languages</a>” by <strong>Evan Czaplicki</strong></li>
+<li>“<a href="https://taylor.town/black-holes">Don't Play Near Black Holes</a>” by <strong>Taylor Troesh</strong></li>
 <li>“<a href="https://www.marginalia.nu/log/82_killing_community/">Killing Community</a>” by <strong>marginalia.nu</strong></li>
 <li>“<a href="https://www.marginalia.nu/log/19-website-discoverability-crisis/">The Small Website Discoverability Crisis</a>” by <strong>marginalia.nu</strong></li>
 <li>“<a href="https://www.theindex.media/p/the-elegance-of-endurance-what-centuries">Elegance of endurance</a>” by <strong>Joan Westenberg</strong></li>
@@ -19,6 +24,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://fusoya.eludevisibility.org/lm/">Lunar Magic: Super Mario World ROM and level editor</a>”</li>
 <li>“<a href="https://brainbaking.com/post/2023/08/an-ode-to-game-boy-cartridges/">An Ode To Game Boy Cartridges</a>” by <strong>Wouter Groeneveld</strong></li>
 <li>“<a href="https://gbhwdb.gekkio.fi">Game Boy hardware database</a>”</li>
 <li>“<a href="https://www.amigalove.com/viewtopic.php?t=2639">Rogue, and other Roguelikes for Amiga</a>” by <strong>intric8</strong></li>
@@ -44,6 +50,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>” by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
+<li>“<a href="https://steveklabnik.com/writing/memory-safety-is-a-red-herring">Memory Safety is a Red Herring</a>” by <strong>Steve Klabnik</strong></li>
 <li>“<a href="https://dgl.cx/2023/09/ansi-terminal-security">" [31m"?! ANSI Terminal security in 2023 and finding 10 CVEs</a>”</li>
 <li>“<a href="https://blog.yossarian.net/2023/10/18/Some-concerns-with-OpenPubKey">Some concerns with OpenPubKey</a>” by <strong>William Woodruff</strong></li>
 <li>“<a href="https://words.filippo.io/dispatches/seeds-bounty">Announcing the $8,192 NIST Elliptic Curves Seeds Bounty</a>” by <strong>Filippo Valsorda</strong></li>
@@ -51,6 +58,12 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://huonw.github.io/blog/2021/09/qr-error-correction/">QR error correction</a>” by <strong>Huon Wilson</strong></li>
+<li>“<a href="https://messwithdns.net">Mess with DNS</a>” by <strong>Julia Evans</strong></li>
+<li>“<a href="https://blog.yossarian.net/2023/12/24/You-dont-need-analytics-on-your-blog">You don't need analytics on your blog</a>”</li>
+<li>“<a href="https://m.youtube.com/watch?v=9qljpi5jiMQ">GitHub Actions Feels Bad</a>” by <strong>fasterthanlime</strong></li>
+<li>“<a href="https://davidism.com/github-pull-request-pitfalls/">Pitfalls for Pull Requests on GitHub</a>” by <strong>David Lord</strong></li>
+<li>“<a href="https://imperavi.com/books/ui-typography/">User Interface Typography</a>”</li>
 <li>“<a href="https://jjtech.dev/reverse-engineering/imessage-explained/">iMessage protocol</a>” by <strong>JJTech</strong></li>
 <li>“<a href="https://how-did-i-get-here.net">How Did I Get Here?</a>”</li>
 <li>“<a href="https://hypermedia.systems">Hypermedia Systems</a>” by <strong>Carson Gross, Adam Stepinski, and Deniz Akşimşek </strong></li>
