--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,14 +7,15 @@
         <div class="col-6 col-12-sm">
             <p>
                 Hey there! My name is Seth, and I am the <a href="https://pyfound.blogspot.com/2023/06/announcing-our-new-security-developer.html" target="_blank" rel="noopener noreferrer">Security Developer-in-Residence</a>
-                at the Python Software Foundation working on improving the security posture of the Python ecosystem.
+                at the Python Software Foundation working to improve the security posture of the Python ecosystem.
             </p>
             <p>
-                I was made a Python Software Foundation Fellow in 2022. I maintain multiple open source projects
-                including urllib3, truststore, and Requests.
+                I enjoy writing about software on my blog. <nobr>I maintain a few</nobr> open source projects
+                including urllib3 and truststore.
             </p>
         </div>
         <div class="col-2 col-4-sm" style="text-align: right;">
+            <div>Location:</div>
             <div>Pronouns:</div>
             <div>Email:</div>
             <div>Email:</div>
@@ -25,6 +26,7 @@
             <div>Twitter:</div>
         </div>
         <div class="col-4 col-8-sm">
+            <div>Minneapolis, MN</div>
             <div>he/him</div>
             <div><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer">sethmichaellarson@gmail.com</a></div>
             <div><a href="mailto:seth@python.org" target="_blank" rel="noopener noreferrer">seth@python.org</a></div>
