--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,11 +9,13 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
+<li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
+<li>“<a href="https://www.npr.org/2024/01/17/1224955473/social-media-algorithm-filterworld">Algorithms flatten culture</a>” by <strong>Tonya Mosley</strong></li>
 <li>“<a href="https://blog.cassidoo.co/post/human-curation/">I miss human curation</a>” by <strong>Cassidy Williams</strong></li>
 <li>“<a href="https://www.niemanlab.org/2023/12/the-robots-will-make-us-more-human/">Robots will make us more human</a>” by <strong>Andrew Golis</strong></li>
 <li>“<a href="https://moonbase.lgbt/blog/i-want-to-see-my-friends-posts/">I want to see my friends’ posts</a>” by <strong>Luna</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=XZ3w_jec1v8">The Economics of Programming Languages</a>” by <strong>Evan Czaplicki</strong></li>
-<li>“<a href="https://taylor.town/black-holes">Don't Play Near Black Holes</a>” by <strong>Taylor Troesh</strong></li>
+<li>“<a href="https://taylor.town/black-holes">Don't play near black holes</a>” by <strong>Taylor Troesh</strong></li>
 <li>“<a href="https://www.marginalia.nu/log/82_killing_community/">Killing Community</a>” by <strong>marginalia.nu</strong></li>
 <li>“<a href="https://www.marginalia.nu/log/19-website-discoverability-crisis/">The Small Website Discoverability Crisis</a>” by <strong>marginalia.nu</strong></li>
 <li>“<a href="https://www.theindex.media/p/the-elegance-of-endurance-what-centuries">Elegance of endurance</a>” by <strong>Joan Westenberg</strong></li>
@@ -24,6 +26,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://brainbaking.com/post/2022/04/analogue-pocket/">Analogue Pocket: the definitive Game Boy handheld?</a>” by <strong>Wouter Groeneveld</strong></li>
 <li>“<a href="https://fusoya.eludevisibility.org/lm/">Lunar Magic: Super Mario World ROM and level editor</a>”</li>
 <li>“<a href="https://brainbaking.com/post/2023/08/an-ode-to-game-boy-cartridges/">An Ode To Game Boy Cartridges</a>” by <strong>Wouter Groeneveld</strong></li>
 <li>“<a href="https://gbhwdb.gekkio.fi">Game Boy hardware database</a>”</li>
@@ -58,10 +61,13 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://ruffle.rs">Ruffle: Flash player written in Rust</a>”</li>
+<li>“<a href="https://endtimes.dev/why-lowercase-letters-save-data/">why lowercase letters save data</a>” by <strong>Nathaniel</strong></li>
+<li>“<a href="https://mozilla.github.io/platform-tilt/">How Firefox is disadvantaged on every platform</a>” by <strong>Mozilla</strong></li>
 <li>“<a href="https://huonw.github.io/blog/2021/09/qr-error-correction/">QR error correction</a>” by <strong>Huon Wilson</strong></li>
 <li>“<a href="https://messwithdns.net">Mess with DNS</a>” by <strong>Julia Evans</strong></li>
-<li>“<a href="https://blog.yossarian.net/2023/12/24/You-dont-need-analytics-on-your-blog">You don't need analytics on your blog</a>”</li>
-<li>“<a href="https://m.youtube.com/watch?v=9qljpi5jiMQ">GitHub Actions Feels Bad</a>” by <strong>fasterthanlime</strong></li>
+<li>“<a href="https://blog.yossarian.net/2023/12/24/You-dont-need-analytics-on-your-blog">You don't need analytics on your blog</a>” by <strong>William Woodruff</strong></li>
+<li>“<a href="https://m.youtube.com/watch?v=9qljpi5jiMQ">GitHub Actions Feels Bad</a>” by <strong>Amos Wenger</strong></li>
 <li>“<a href="https://davidism.com/github-pull-request-pitfalls/">Pitfalls for Pull Requests on GitHub</a>” by <strong>David Lord</strong></li>
 <li>“<a href="https://imperavi.com/books/ui-typography/">User Interface Typography</a>”</li>
 <li>“<a href="https://jjtech.dev/reverse-engineering/imessage-explained/">iMessage protocol</a>” by <strong>JJTech</strong></li>
@@ -79,6 +85,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://tofu.quest">Is It Tofu? Check Unicode compatibility</a>” by <strong>Aaron Madlon-Kay</strong></li>
 </ul>
 <h2>Toy / Art</h2><ul>
+<li>“<a href="https://mcbroken.com">McBroken: is the McDonalds ice cream machine broken?</a>” by <strong>Rashiq</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=QPFWzSlg-78">Pikmin 2 Procedural Cave Music</a>” by <strong>Scruffy</strong></li>
 <li>“<a href="https://theanglebracket.com">The Angle Bracket</a>”</li>
 <li>“<a href="https://dukope.com/devlogs/papers-please/lcdplease/">Making "LCD, Please"</a>” by <strong>Lucas Pope</strong></li>
