--- a/app/static/style.css
+++ b/app/static/style.css
@@ -64,6 +64,9 @@ a > code {
   text-decoration: none;
 }
 a[href^=tel]{ color:#000; text-decoration:none}
+a:hover {
+  color: #ff00ff !important;
+}
 
 table {
   border-collapse: collapse;
@@ -146,10 +149,6 @@ h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5 .anch
 blockquote > p:last-child {
     margin-bottom: 0;
 }
-p {
-  margin: 0;
-  margin-bottom: 1.5em;
-}
 input[type=submit], input[type=email] {
   font-weight: 400;
   border-radius: 0;
@@ -182,8 +181,8 @@ button {
 #bd-email {
   max-width: 60%;
 }
-li:not(:first-child) {
-  margin-top: 0.5rem;
+li > p {
+  margin: 0;
 }
 pre {
   margin: 0;
