--- a/app/static/style.css
+++ b/app/static/style.css
@@ -146,7 +146,10 @@ h1:hover .anchor, h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5 .anch
   visibility: visible;
   opacity: 1;
 }
-blockquote > p:last-child {
+blockquote > :first-child {
+  margin-top: 0;
+}
+blockquote > :last-child {
     margin-bottom: 0;
 }
 input[type=submit], input[type=email] {
