Add Signal username and URL

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,7 @@
             <div>Email:</div>
             <div>Mastodon:</div>
             <div>GitHub:</div>
+            <div>Signal:</div>
             <div>Discord:</div>
             <div>LinkedIn:</div>
             <div>Twitter:</div>
@@ -32,6 +33,7 @@
             <div><a href="mailto:seth@python.org" target="_blank" rel="noopener noreferrer">seth@python.org</a></div>
             <div><a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson@fosstodon.org</a></div>
             <div><a href="https://github.com/sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson</a></div>
+            <div><a href="https://signal.me/#eu/gpQLD3Q+O1Azvo7cD5nggei42PazYNXHnL1XYLaumYjv/ZCr09NK0Z7uJKTlnFJw" target="_blank" rel="me noopener noreferrer">sethmlarson.99</a></div>
             <div><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
             <div><a href="https://www.linkedin.com/in/sethmlarson/" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
             <div><a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
