New article: Security Developer-in-Residence Weekly Report #31

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -31,8 +31,10 @@ Reading time: {{ reading_time }} minute{{ 's' if reading_time != 1 else '' }} <a
       target="popupwindow"
       onsubmit="window.open('https://buttondown.email/sethmlarson', 'popupwindow')"
     >
-        <input type="email" name="email" id="bd-email" placeholder="Email address here" required/>
-    <input type="submit" value="Subscribe"/>
+    <center>
+        <input type="email" name="email" id="bd-email" placeholder="Email address here" style="max-width: 100%; width: 16em; margin-bottom: 0.5em;" required/><br>
+        <input type="submit" value="Subscribe" style="max-width: 100%; width: 16em;"/>
+    </center>
     </form>
     </p>
 </blockquote>
