--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,6 +9,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
+<li>“<a href="https://nesslabs.com/ikigai">Rediscovering Ikigai: What We Got Wrong & How to Find Meaning in Life</a>” by <strong>Anne-Laure Le Cunff</strong></li>
+<li>“<a href="https://ourworldindata.org/much-better-awful-can-be-better">The world is awful, much better, and can be much better</a>” by <strong>Max Roser</strong></li>
 <li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
 <li>“<a href="https://www.npr.org/2024/01/17/1224955473/social-media-algorithm-filterworld">Algorithms flatten culture</a>” by <strong>Tonya Mosley</strong></li>
 <li>“<a href="https://blog.cassidoo.co/post/human-curation/">I miss human curation</a>” by <strong>Cassidy Williams</strong></li>
@@ -26,6 +28,10 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://fabiensanglard.net/snes_carts/index.html">Super Nintendo Cartridges</a>” by <strong>Fabien Sanglard</strong></li>
+<li>“<a href="https://github.com/PretendoNetwork/SSSL">SSSL: hackless TLS bypass for the Wii U</a>” by <strong>Pretendo Network</strong></li>
+<li>“<a href="https://www.archdaily.com/783657/the-sheets-of-graph-paper-they-used-to-design-super-mario-bros">Super Mario Bros was designed on graph paper</a>” by <strong>Nicolás Valencia</strong></li>
+<li>“<a href="https://int10h.org/blog/2024/02/game-font-forensics/">Game Font Forensics</a>”</li>
 <li>“<a href="https://brainbaking.com/post/2022/04/analogue-pocket/">Analogue Pocket: the definitive Game Boy handheld?</a>” by <strong>Wouter Groeneveld</strong></li>
 <li>“<a href="https://fusoya.eludevisibility.org/lm/">Lunar Magic: Super Mario World ROM and level editor</a>”</li>
 <li>“<a href="https://brainbaking.com/post/2023/08/an-ode-to-game-boy-cartridges/">An Ode To Game Boy Cartridges</a>” by <strong>Wouter Groeneveld</strong></li>
@@ -53,6 +59,7 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>” by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
+<li>“<a href="https://www.hezmatt.org/~mpalmer/blog/2024/04/09/how-i-tripped-over-the-debian-weak-keys-vuln.html">Tripping over the Debian Weak Keys vulnerability</a>” by <strong>Matt Palmer</strong></li>
 <li>“<a href="https://steveklabnik.com/writing/memory-safety-is-a-red-herring">Memory Safety is a Red Herring</a>” by <strong>Steve Klabnik</strong></li>
 <li>“<a href="https://dgl.cx/2023/09/ansi-terminal-security">" [31m"?! ANSI Terminal security in 2023 and finding 10 CVEs</a>”</li>
 <li>“<a href="https://blog.yossarian.net/2023/10/18/Some-concerns-with-OpenPubKey">Some concerns with OpenPubKey</a>” by <strong>William Woodruff</strong></li>
@@ -61,6 +68,12 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://gpsjam.org">Map of GPS/GNSS interference</a>” by <strong>John Wiseman</strong></li>
+<li>“<a href="https://jvns.ca/blog/2014/12/21/fear-makes-you-a-worse-programmer/">Fear makes you a worse programmer</a>” by <strong>Julia Evans</strong></li>
+<li>“<a href="https://huonw.github.io/blog/2024/03/qr-base10-base64/">10 > 64, in QR codes | Huon on the internet</a>”</li>
+<li>“<a href="https://rfc.zeromq.org/spec/32/">32/Z85 | ZeroMQ RFC</a>”</li>
+<li>“<a href="https://www.joelonsoftware.com/2000/04/06/things-you-should-never-do-part-i/">Never rewrite software from scratch</a>” by <strong>Joel Spolsky</strong></li>
+<li>“<a href="https://clig.dev">Command Line Interface Guidelines</a>”</li>
 <li>“<a href="https://ruffle.rs">Ruffle: Flash player written in Rust</a>”</li>
 <li>“<a href="https://endtimes.dev/why-lowercase-letters-save-data/">why lowercase letters save data</a>” by <strong>Nathaniel</strong></li>
 <li>“<a href="https://mozilla.github.io/platform-tilt/">How Firefox is disadvantaged on every platform</a>” by <strong>Mozilla</strong></li>
@@ -85,6 +98,14 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://tofu.quest">Is It Tofu? Check Unicode compatibility</a>” by <strong>Aaron Madlon-Kay</strong></li>
 </ul>
 <h2>Toy / Art</h2><ul>
+<li>“<a href="https://www.terminal.shop">Order coffee from your terminal</a>”</li>
+<li>“<a href="https://medium.com/@grubbycoder/porting-8-bit-sonic-2-to-the-ti-84-ce-7ec99f9981c9">Porting 8-bit Sonic 2 to the TI-84 CE</a>” by <strong>grubbycoder</strong></li>
+<li>“<a href="https://kidpix.app">KidPix for the web</a>” by <strong>Craig Hickman</strong></li>
+<li>“<a href="https://mastodon.social/@ahl/112243122623783002">Physics simulation of the Nebraska maintainer XKCD</a>” by <strong>Adam Leventhal</strong></li>
+<li>“<a href="https://www.mayerowitz.io/blog/mario-meets-pareto">Mario meets Pareto</a>” by <strong>Antoine Mayerowitz</strong></li>
+<li>“<a href="https://www.tindie.com/products/sqfmi/watchy/">Watchy from SQFMI on Tindie</a>”</li>
+<li>“<a href="https://tomayac.github.io/joy-con-webhid/demo/">Joy-Con and WebHID</a>”</li>
+<li>“<a href="https://shot-scraper.datasette.io/en/stable/">CLI for capturing pictures and PDFs of websites</a>” by <strong>Simon Willison</strong></li>
 <li>“<a href="https://mcbroken.com">McBroken: is the McDonalds ice cream machine broken?</a>” by <strong>Rashiq</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=QPFWzSlg-78">Pikmin 2 Procedural Cave Music</a>” by <strong>Scruffy</strong></li>
 <li>“<a href="https://theanglebracket.com">The Angle Bracket</a>”</li>
