Update more links

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -9,7 +9,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 </p>
 <p>
 <h2>Life</h2><ul>
-<li>“<a href="https://nesslabs.com/ikigai">Rediscovering Ikigai: What We Got Wrong & How to Find Meaning in Life</a>” by <strong>Anne-Laure Le Cunff</strong></li>
+<li>“<a href="https://www.marginalia.nu/log/a_108_feynman_revisited/">Feynman's Garden</a>” by <strong>marginalia.nu</strong></li>
+<li>“<a href="https://nesslabs.com/ikigai">What We Got Wrong and How to Find Meaning in Life</a>” by <strong>Anne-Laure Le Cunff</strong></li>
 <li>“<a href="https://ourworldindata.org/much-better-awful-can-be-better">The world is awful, much better, and can be much better</a>” by <strong>Max Roser</strong></li>
 <li>“<a href="https://www.youtube.com/@CannedFishFiles">Canned Fish Files</a>” by <strong>Matthew Carlson</strong></li>
 <li>“<a href="https://www.npr.org/2024/01/17/1224955473/social-media-algorithm-filterworld">Algorithms flatten culture</a>” by <strong>Tonya Mosley</strong></li>
@@ -28,7 +29,9 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by <strong>Good Vibes Gaming</strong></li>
 <li>“<a href="https://fabiensanglard.net/snes_carts/index.html">Super Nintendo Cartridges</a>” by <strong>Fabien Sanglard</strong></li>
+<li>“<a href="https://www.youtube.com/watch?v=uZyLY2Uyi04">Building a brand new Game Boy Advance in 2024</a>” by <strong>Macho Nacho Productions</strong></li>
 <li>“<a href="https://github.com/PretendoNetwork/SSSL">SSSL: hackless TLS bypass for the Wii U</a>” by <strong>Pretendo Network</strong></li>
 <li>“<a href="https://www.archdaily.com/783657/the-sheets-of-graph-paper-they-used-to-design-super-mario-bros">Super Mario Bros was designed on graph paper</a>” by <strong>Nicolás Valencia</strong></li>
 <li>“<a href="https://int10h.org/blog/2024/02/game-font-forensics/">Game Font Forensics</a>”</li>
@@ -59,6 +62,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://www.youtube.com/watch?v=EkcISHZvWHE">Ashida Portable GameCube Assembly</a>” by <strong>GingerOfVODs</strong></li>
 </ul>
 <h2>Security</h2><ul>
+<li>“<a href="https://denysdovhan.com/home-assistant-config/config/war/">Home Assistant for Wartime Safety</a>” by <strong>Denys Dovhan</strong></li>
+<li>“<a href="https://berthub.eu/articles/posts/cyber-security-pre-war-reality-check/">Cyber Security: A Pre-War Reality Check</a>” by <strong>Bert Hubert</strong></li>
 <li>“<a href="https://www.hezmatt.org/~mpalmer/blog/2024/04/09/how-i-tripped-over-the-debian-weak-keys-vuln.html">Tripping over the Debian Weak Keys vulnerability</a>” by <strong>Matt Palmer</strong></li>
 <li>“<a href="https://steveklabnik.com/writing/memory-safety-is-a-red-herring">Memory Safety is a Red Herring</a>” by <strong>Steve Klabnik</strong></li>
 <li>“<a href="https://dgl.cx/2023/09/ansi-terminal-security">" [31m"?! ANSI Terminal security in 2023 and finding 10 CVEs</a>”</li>
@@ -68,7 +73,9 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
-<li>“<a href="https://gpsjam.org">Map of GPS/GNSS interference</a>” by <strong>John Wiseman</strong></li>
+<li>“<a href="https://brr.fyi/posts/engineering-for-slow-internet">Engineering for Slow Internet</a>” by <strong>brr</strong></li>
+<li>“<a href="https://harihareswara.net/posts/2024/references-pycon-us-keynote/">Untold stories from 6 years working on Python packaging</a>” by <strong>Sumana Harihareswara</strong></li>
+<li>“<a href="https://gpsjam.org/?date=2024-04-28&lat=53.47155&lon=32.20202&z=4.2">Map of GPS/GNSS interference</a>” by <strong>John Wiseman</strong></li>
 <li>“<a href="https://jvns.ca/blog/2014/12/21/fear-makes-you-a-worse-programmer/">Fear makes you a worse programmer</a>” by <strong>Julia Evans</strong></li>
 <li>“<a href="https://huonw.github.io/blog/2024/03/qr-base10-base64/">10 > 64, in QR codes | Huon on the internet</a>”</li>
 <li>“<a href="https://rfc.zeromq.org/spec/32/">32/Z85 | ZeroMQ RFC</a>”</li>
