New article: Lockdown Mode

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -29,6 +29,9 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://brettscott.substack.com/p/tech-doesnt-make-our-lives-easier">Tech doesn’t make our lives easier. It makes them faster</a>” by <strong>Brett Scott</strong></li>
 </ul>
 <h2>Retro Gaming</h2><ul>
+<li>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by <strong>Kirbyster</strong></li>
+<li>“<a href="https://orangegb.com/orangefm/">ORANGE FM, Game Boy cartridge for FM Radio</a>” by <strong>Evan Barger </strong></li>
+<li>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by <strong>Gered King</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by <strong>Good Vibes Gaming</strong></li>
 <li>“<a href="https://fabiensanglard.net/snes_carts/index.html">Super Nintendo Cartridges</a>” by <strong>Fabien Sanglard</strong></li>
 <li>“<a href="https://www.youtube.com/watch?v=uZyLY2Uyi04">Building a brand new Game Boy Advance in 2024</a>” by <strong>Macho Nacho Productions</strong></li>
@@ -73,6 +76,10 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://blog.trailofbits.com/2023/05/23/trusted-publishing-a-new-benchmark-for-packaging-security">Trusted publishing: a new benchmark for packaging security</a>” by <strong>William Woodruff</strong></li>
 </ul>
 <h2>Software / OSS</h2><ul>
+<li>“<a href="https://holtwick.de/en/blog/localfirst-resilient-sync">Resilient Sync for Local First</a>” by <strong>Dirk Holtwick</strong></li>
+<li>“<a href="https://tonsky.me/blog/crdt-filesync/">Local, first, forever</a>” by <strong>Nikita Prokopov</strong></li>
+<li>“<a href="https://www.datagubbe.se/stupidslow/">Stupid Slow</a>” by <strong>Carl Svensson</strong></li>
+<li>“<a href="https://www.inkandswitch.com/local-first/">Local-first software</a>” by <strong>Martin Kleppmann</strong></li>
 <li>“<a href="https://brr.fyi/posts/engineering-for-slow-internet">Engineering for Slow Internet</a>” by <strong>brr</strong></li>
 <li>“<a href="https://harihareswara.net/posts/2024/references-pycon-us-keynote/">Untold stories from 6 years working on Python packaging</a>” by <strong>Sumana Harihareswara</strong></li>
 <li>“<a href="https://gpsjam.org/?date=2024-04-28&lat=53.47155&lon=32.20202&z=4.2">Map of GPS/GNSS interference</a>” by <strong>John Wiseman</strong></li>
@@ -105,6 +112,8 @@ I use <a href="https://omnivore.app">Omnivore</a> to read, tag, and share URLs. 
 <li>“<a href="https://tofu.quest">Is It Tofu? Check Unicode compatibility</a>” by <strong>Aaron Madlon-Kay</strong></li>
 </ul>
 <h2>Toy / Art</h2><ul>
+<li>“<a href="https://www.candyjapan.com/behind-the-scenes/algorithmic-fitting-of-japanese-candy">Algorithmic fitting of Japanese candy</a>” by <strong>Candy Japan</strong></li>
+<li>“<a href="https://meatfighter.com/ascii-silhouettify/">ASCII Silhouettify</a>” by <strong>Meat Fighter</strong></li>
 <li>“<a href="https://www.terminal.shop">Order coffee from your terminal</a>”</li>
 <li>“<a href="https://medium.com/@grubbycoder/porting-8-bit-sonic-2-to-the-ti-84-ce-7ec99f9981c9">Porting 8-bit Sonic 2 to the TI-84 CE</a>” by <strong>grubbycoder</strong></li>
 <li>“<a href="https://kidpix.app">KidPix for the web</a>” by <strong>Craig Hickman</strong></li>
